[gd_scene load_steps=3 format=3 uid="uid://jcbwidb4gn6e"]

[ext_resource type="Script" path="res://scripts/ui/player_ui.gd" id="1_jpljn"]
[ext_resource type="FontFile" uid="uid://vnj01hulxhqg" path="res://fonts/prstart.ttf" id="2_r1qfm"]

[node name="player_ui" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1174.0
offset_bottom = -580.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jpljn")

[node name="lap_label" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_r1qfm")
theme_override_font_sizes/font_size = 8
text = "LAP
  1/3"

[node name="position_label" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_r1qfm")
theme_override_font_sizes/font_size = 8
text = "1/3
   POS"

[node name="verdict_label" type="Label" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_r1qfm")
theme_override_font_sizes/font_size = 8
text = "1st
CONGRATULATIONS!"
horizontal_alignment = 1
vertical_alignment = 1
